--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
     "name": "ururu",
-    "productName": "ururu",
-    "description": "No URURU, just LRU",
+    "description": "No URURU, just LRU (and friends)",
     "version": "1.0.1",
     "author": {
-        "name": "Yaroslav Surilov",
-        "email": "ysurilov@tutamail.com"
+        "name": "Yaroslav Surilov"
     },
     "scripts": {
-        "test": "mocha",
-        "build": "webpack"
+        "test": "mocha"
     },
     "type": "module",
-    "main": "build/index.js",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/zhibirc/ururu.git"
@@ -22,6 +18,8 @@
         "caching",
         "LRU",
         "LRU cache",
+        "TTL",
+        "TTL cache",
         "performance",
         "optimization"
     ],
@@ -31,9 +29,6 @@
     },
     "homepage": "https://github.com/zhibirc/ururu#readme",
     "devDependencies": {
-        "chai": "4.3.6",
-        "mocha": "9.2.0",
-        "webpack": "5.68.0",
-        "webpack-cli": "4.9.2"
+        "typescript": "^5.2.2"
     }
 }
