feat(infra): rework project struct, add TSC with config

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "author": {
         "name": "Yaroslav Surilov"
     },
-    "scripts": {},
+    "scripts": {
+        "compile": "tsc"
+    },
     "type": "module",
     "repository": {
         "type": "git",
